# euclidesdb

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/: build.workflow  main.workflow
.github/ISSUE_TEMPLATE/: bug-report-or-feature-request.md  bug_report.md
cmake/: FindGRPC.cmake  FindLevelDB.cmake  TargetCopyFiles.cmake
docker/euclides_v1/: Dockerfile  bootstrap_euclidesdb.sh  euclidesdb.conf  run.sh
docker/euclidesdb/: bootstrap_euclidesdb.sh  run.sh
docker/euclidesdb_build/: Dockerfile  build.sh
docker/package/: Dockerfile
docs/images/: arch.sketch  models_dir.sketch
docs/images/original_logo/: logo.psd
docs/source/: changelog.rst  client.rst  conf.py  configuration.rst  contributing.rst  getstarted.rst  grpcapi.rst  index.rst  installation.rst  license.rst
java/: .gitignore  README.md  build.gradle  settings.gradle
java/src/main/: proto  resources
java/src/main/java/org/euclidesdb/: Client.java
java/src/test/java/org/euclidesdb/: ClientTest.java
models/resnet101/: model.conf  resnet_trace.py
models/resnet18/: model.conf  resnet_trace.py
models/vgg16/: model.conf  vgg16_trace.py
python/: requirements.txt  setup.py
python/euclides/: __init__.py  euclidesproto_pb2.py  euclidesproto_pb2_grpc.py  services.py
python/examples/: add_image.py  add_image_directory.py  find_similar.py
source/: EuclidesConfig.h.in  databasemanager.cpp  databasemanager.hpp  euclidesdb.conf  main.cpp  sample_config.conf  se_annoy.cpp  se_annoy.hpp  se_faissfactory.cpp  se_faissfactory.hpp  se_linear.cpp  se_linear.hpp  searchengine.cpp  searchengine.hpp  similarservice.cpp  similarservice.hpp  torchmanager.cpp  torchmanager.hpp
source/protos/: euclidesproto.proto
source/python/: addimage.py  findsimilar.py  gen_protobuf.sh  shutdown.py
